# ng_bot

./: .gitignore  README.md  app.py  pyproject.toml  requirements.txt
ng_bot/: __init__.py  __main__.py  bot.py  discord.py  ngrok_wrapper.py
service/: README.md  ng_bot.service
tele_ng_bot/: __init__.py  __main__.py  bot.py  ngrok_wrapper.py
